--- a/default.hbs
+++ b/default.hbs
@@ -11,13 +11,21 @@
 </head>
 
 <body class="{{body_class}} is-head-{{#match @custom.navigation_layout "Logo on the left"}}left-logo{{else match @custom.navigation_layout "Logo in the middle"}}middle-logo{{else}}stacked{{/match}}{{#match @custom.title_font "=" "Elegant serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "Elegant serif"}} has-serif-body{{/match}}">
-<div class="site">
+<!-- 選單欄 -->
+<div class="navbar">
+    <img src="{{@site.logo}}" alt="{{@site.title}}">
+    {{navigation}}
+</div>
+<!-- 添加一个半透明黑色背景层 -->
+<div class="overlay" onclick="closeNavbar()"></div>
 
+
+<div class="site">
     <header id="gh-head" class="gh-head gh-outer">
         <div>
             <div class="gh-head-inner">
                 <div class="gh-head-brand">
-                    <button class="gh-burger"></button>
+                    <button class="gh-burger" onclick="toggleNavbar()"></button>
                     
                     <div class="gh-head-brand-wrapper">
                         <a class="gh-head-logo" href="{{@site.url}}">
