fix: buger navbar

--- a/default.hbs
+++ b/default.hbs
@@ -23,7 +23,9 @@
             {{@site.title}}
         {{/if}}
     </a>
-    {{navigation}}
+    <div class="navindex">
+        {{navigation}}
+    </div>
 </div>
 <!-- 添加一个半透明黑色背景层 -->
 <div class="overlay" onclick="closeNavbar()"></div>
