--- a/assets/built/screen.css
+++ b/assets/built/screen.css
@@ -1,3 +1,8 @@
+@charset "utf-8";
+/* CSS Document */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400&display=swap');
+
+
 :root {
   --color-primary-text: #333;
   --color-secondary-text: #999;
@@ -10,7 +15,7 @@
   --color-black: #000;
   --font-sans: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif;
-  --font-serif: Georgia, serif;
+  --font-serif: serif, Georgia;
   --head-nav-gap: 2.8rem;
   --h1-size: 4.6rem;
   --gap: 3.6rem;
@@ -90,7 +95,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--color-white);
   color: var(--color-primary-text);
-  font-family: var(--font-sans);
+  font-family: var(--font-serif);
   font-size: 1.6rem;
   line-height: 1.6;
 }
