--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -14,3 +14,6 @@
 @import "misc/owl.css";
 @import "misc/utilities.css";
 @import "misc/dark.css";
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400&display=swap');
+
