--- a/default.hbs
+++ b/default.hbs
@@ -83,11 +83,15 @@
         {{#if @custom.show_featured_posts}}
             {{> "featured"}}
         {{/if}}
-    {{/is}}
+        {{> "home-issue"}}
+    
+    {{else}}
 
-    <div class="site-content">
-        {{{body}}}
-    </div>
+        <div class="site-content">
+            {{{body}}}
+        </div>
+
+    {{/is}}
 
     <footer class="gh-foot{{#unless @site.secondary_navigation}} no-menu{{/unless}} gh-outer">
         <div class="gh-foot-inner gh-inner">
