add: homepage theme (campus, sport, reader)

--- a/default.hbs
+++ b/default.hbs
@@ -84,6 +84,9 @@
             {{> "featured"}}
         {{/if}}
         {{> "home-issue"}}
+        {{> "home-campus"}}
+        {{> "home-sport"}}
+        {{> "home-reader"}}
     
     {{else}}
 
