--- a/partials/home-issue.hbs
+++ b/partials/home-issue.hbs
@@ -1,11 +1,13 @@
-{{#get "tags" filter="slug:issue"}}
-    <h1 class="m-subject-title" >{{tags.[0].name}}</h1>
-    {{#if tags.[0].description}}
-        <p class="m-hero-description">
-        {{tags.[0].description}}
-        </p>
-    {{/if}}
-{{/get}}
+<div class="gh-outer">
+    {{#get "tags" filter="slug:issue"}}
+        <h2 class="topic-title" >{{tags.[0].name}}</h2>
+        {{#if tags.[0].description}}
+            <p class="m-hero-description">
+            {{tags.[0].description}}
+            </p>
+        {{/if}}
+    {{/get}}
+</div>
 {{#get "posts" filter="tag:issue" limit="10" include="tags"}}
 <div class="gh-outer"><div class="featured-posts carousel owl gh-inner">
     
