--- a/assets/built/screen.css
+++ b/assets/built/screen.css
@@ -6,7 +6,7 @@
   --color-light-gray: #e6e6e6;
   --color-mid-gray: #ccc;
   --color-dark-gray: #444;
-  --color-darker-gray: #15171a;
+  --color-darker-gray: #616161;
   --color-black: #000;
   --font-sans: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif;
@@ -456,7 +456,7 @@ iframe {
 }
 .is-head-transparent .gh-head-btn {
   background-color: #fff;
-  color: #15171a;
+  color: #616161;
 }
 .is-head-transparent .gh-head-menu:after,
 .is-head-transparent .gh-head-menu:before {
@@ -492,7 +492,7 @@ iframe {
 }
 .is-head-dark:not(.is-head-transparent) .gh-head-btn {
   background-color: #fff;
-  color: #15171a;
+  color: #616161;
 }
 .is-head-dark:not(.is-head-transparent) .gh-head-menu:after,
 .is-head-dark:not(.is-head-transparent) .gh-head-menu:before {
@@ -517,7 +517,7 @@ iframe {
 }
 .is-head-brand:not(.is-head-transparent) .gh-head-btn {
   background-color: #fff;
-  color: #15171a;
+  color: #616161;
 }
 .is-head-brand:not(.is-head-transparent) .gh-head-menu:after,
 .is-head-brand:not(.is-head-transparent) .gh-head-menu:before {
@@ -559,7 +559,7 @@ iframe {
   visibility: visible;
 }
 .gh-dropdown li a {
-  color: #15171a !important;
+  color: #616161 !important;
   display: block;
   padding: 6px 20px;
 }
