--- a/partials/home-campus.hbs
+++ b/partials/home-campus.hbs
@@ -35,6 +35,10 @@
             </div>
         </header>
 
+        <div class="card-post-content">
+            {{content}}
+        </div>
+
     </article>
     {{/foreach}}
 
