--- a/partials/home-issue.hbs
+++ b/partials/home-issue.hbs
@@ -15,7 +15,7 @@
     <article class="{{post_class}}{{#unless feature_image}} no-image{{/unless}}">
 
         <figure class="post-media">
-        <div class="u-placeholder square">
+        <div class="u-placeholder rectangle">
             <a class="post-image-link" href="{{url}}">
                 {{#if feature_image}}
                     <img class="post-image u-object-fit" src="{{img_url feature_image size="m"}}" alt="{{title}}">
@@ -36,7 +36,7 @@
         </header>
 
         <div class="card-post-content">
-            {{content}}
+            <p>{{content}}</p>
         </div>
 
     </article>
