--- a/partials/home-sport.hbs
+++ b/partials/home-sport.hbs
@@ -15,7 +15,7 @@
     <article class="{{post_class}}{{#unless feature_image}} no-image{{/unless}}">
 
         <figure class="post-media">
-        <div class="u-placeholder square">
+        <div class="u-placeholder rectangle">
             <a class="post-image-link" href="{{url}}">
                 {{#if feature_image}}
                     <img class="post-image u-object-fit" src="{{img_url feature_image size="m"}}" alt="{{title}}">
