--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,4 +1,4 @@
-<article class="{{post_class}}{{#unless feature_image}} no-image{{/unless}}">
+<article class="{{post_class}}{{#unless feature_image}} no-image{{/unless}} temp">
 
     {{#if feature_image}}
     <figure class="post-media gh-canvas">
@@ -23,9 +23,11 @@
 
     <div class="gh-canvas">
         <header class="post-header">
+
             <h2 class="post-title">
                 <a class="post-title-link" href="{{url}}">{{title}}</a>
             </h2>
+
             <div class="post-meta">
                 <span class="post-meta-item post-meta-date">
                     <time datetime="{{date format="YYYY-MM-DD"}}">{{date published_at}}</time>
@@ -40,10 +42,11 @@
                     <span class="post-meta-item post-meta-tags"><a class="post-tag post-tag-{{slug}}" href="{{url}}" title="{{name}}">{{name}}</a></span>
                 {{/primary_tag}}
             </div>
+            
         </header>
 
         {{#if excerpt}}
-            <div class="post-excerpt">
+            <div class="card-post-content">
                 {{excerpt words="33"}}
             </div>
         {{/if}}
