--- a/assets/built/screen.css
+++ b/assets/built/screen.css
@@ -1848,9 +1848,19 @@ blockquote.kg-blockquote-alt {
   width: 64px;
 }
 .term-name {
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: 800;
   margin-bottom: 0;
+  text-align: center;
+  color: #E1D4BC;
+
+  position: relative;
+  border-bottom: 1.5px solid #616161; /* Change the color and thickness as needed */
+  margin-bottom: 10px;  /* Adjust the margin to your preference */
+  padding-top: 40px;
+  padding-bottom: 30px;
+  width: 100%;
+  letter-spacing: 0.3em;
 }
 .term-description {
   line-height: 1.5;
@@ -1894,7 +1904,7 @@ blockquote.kg-blockquote-alt {
   gap: 10px;
 }
 .post-title {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 800;
   letter-spacing: 0.15em;
   word-break: break-word;
@@ -1904,7 +1914,7 @@ blockquote.kg-blockquote-alt {
 }
 .post-meta {
   color: var(--secondary-text-color);
-  font-size: 10px;
+  font-size: 14px;
   font-weight: 600;
   letter-spacing: 0.15em;
 }
@@ -2488,6 +2498,14 @@ blockquote.kg-blockquote-alt {
   border-radius: 4.5px;
 }
 
+@media (min-width: 1240px) {
+  .topic-title {
+    width:80%;
+    margin: auto;
+    position: relative;
+  }
+}
+
 /* 首頁貼文卡片內文 */
 .card-post-content {
   display: -webkit-box;
@@ -2500,19 +2518,29 @@ blockquote.kg-blockquote-alt {
   margin: 20px 0px 20px 0px;
 }
 
+@media (min-width: 535px) {
+  .card-post-content {
+    font-size: 18px;
+  }
+}
+
 .card-post-content > :not(p) {
   display: none;
 }
 
-.temp {
+.topic-post-card {
   display: grid;
   grid-template-columns: 1.5fr 2fr; /* 两列，每列的宽度相等 */
   max-width: 1000px;
   margin: 0 auto 40px;
   margin-inline: max(30px, auto);
 }
-@media (max-width: 768px) {
-  .temp {
+@media (max-width: 535px) {
+  .topic-post-card {
     grid-template-columns: 1fr; /* 变为1列 */ 
   }
+}
+
+.post-container{
+  padding: 10px 30px 40px;
 }
