--- a/default.hbs
+++ b/default.hbs
@@ -96,7 +96,7 @@
 
     {{/is}}
 
-    <footer class="gh-foot{{#unless @site.secondary_navigation}} no-menu{{/unless}} gh-outer">
+    <footer class="gh-foot{{#unless @site.secondary_navigation}} no-menu{{/unless}}">
         <div class="gh-foot-inner gh-inner">
             <div class="gh-copyright">
                 {{@site.title}} © {{date format="YYYY"}}
