--- a/assets/built/screen.css
+++ b/assets/built/screen.css
@@ -1833,7 +1833,7 @@ blockquote.kg-blockquote-alt {
 }
 .site-content {
   flex-grow: 1;
-  padding-top: 60px;
+  margin-top: 60px;
 }
 .page-template .site-content {
   padding-top: 0;
