--- a/page.hbs
+++ b/page.hbs
@@ -2,7 +2,7 @@
 
 {{#post}}
 
-<div class="content-area">
+<div class="content-area gh-outer">
 <main class="site-main">
     <article class="{{post_class}}{{#unless feature_image}} no-image{{/unless}} single-post">
 
