--- a/tag.hbs
+++ b/tag.hbs
@@ -1,9 +1,9 @@
 {{!< default}}
 
 <div class="content-area">
-<main class="site-main">
+<main class="site-main gh-outer">
     {{#tag}}
-        <section class="term gh-outer">
+        <section class="term">
             {{#if feature_image}}
                 <div class="term-image-container u-placeholder">
                     <img class="term-image u-object-fit" src={{img_url feature_image size="xs"}} alt={{name}}>
