--- a/assets/built/screen.css
+++ b/assets/built/screen.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200;400;500;600;700;800&display=swap');
+
 :root {
   --color-primary-text: #333;
   --color-secondary-text: #999;
@@ -10,7 +12,7 @@
   --color-black: #000;
   --font-sans: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif;
-  --font-serif: serif, Georgia;
+  --font-serif: 'Noto Serig TC', serif, Georgia;
   --head-nav-gap: 2.8rem;
   --h1-size: 4.6rem;
   --gap: 1.2rem;
@@ -1779,7 +1781,7 @@ blockquote.kg-blockquote-alt {
   --shadow-base: 0 0 5px rgba(0, 0, 0, 0.2);
   --font-sans: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
     Arial, sans-serif;
-  --font-serif: Lora, Times, serif;
+  --font-serif: 'Noto Serif TC', Lora, Times, serif;
   --font-mono: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
     monospace;
   --content-font-size: 1.7rem;
@@ -1928,6 +1930,21 @@ blockquote.kg-blockquote-alt {
   font-weight: 800;
   letter-spacing: 0.15em;
   word-break: break-word;
+}
+/* featured post banner 圖片上的置中標題 */
+.post-title-link-featured {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 25px;
+  font-weight: 800;
+  background-color: rgba(0, 0, 0, 0.3);;
+  letter-spacing: 0.15em;
+  word-break: break-word;
+  padding: 15px;
+  border-radius: 10px;
 }
 .has-serif-title :where(.post-feed, .single-post) .post-title {
   font-family: var(--font-serif);
@@ -2305,6 +2322,7 @@ blockquote.kg-blockquote-alt {
   position: relative;
   z-index: 10;
   border-radius: 20px;
+  text-align: center;
 }
 .u-placeholder:before {
   content: "";
