--- a/partials/featured.hbs
+++ b/partials/featured.hbs
@@ -14,19 +14,17 @@
                     <img class="post-image u-object-fit" src="{{img_url feature_image size="m"}}" alt="{{title}}">
                 {{/if}}
             </a>
+            <h2 class="post-title">
+                <a class="post-title-link-featured" href="{{url}}">{{title}}</a>
+            </h2>
         </div>
         </figure>
 
-        <header class="post-header">
-            <h2 class="post-title">
-                <a class="post-title-link" href="{{url}}">{{title}}</a>
-            </h2>
-            <div class="post-meta">
-                <span class="post-meta-item post-meta-date">
-                    <time datetime="{{date format="YYYY-MM-DD"}}">{{date published_at}}</time>
-                </span>
-            </div>
-        </header>
+        {{!-- <header class="post-header-featured"> --}}
+        {{!-- <h2 class="post-title-featured">
+            <a class="post-title-link-featured" href="{{url}}">{{title}}</a>
+        </h2> --}}
+        {{!-- </header> --}}
 
     </article>
     {{/foreach}}
