--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -15,5 +15,5 @@
 @import "misc/utilities.css";
 @import "misc/dark.css";
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200;400;500;600;700;800&display=swap');
 
