--- a/assets/built/screen.css
+++ b/assets/built/screen.css
@@ -15,12 +15,14 @@
   --font-serif: 'Noto Serif TC', serif, Georgia;
   --head-nav-gap: 2.8rem;
   --h1-size: 4.6rem;
+  --h2-size: 2.4rem;
   --gap: 1.2rem;
   --header-spacing: 80px;
 }
 @media (max-width: 767px) {
   :root {
     --h1-size: 3.2rem !important;
+    --h2-size:2rem;
     --gap: 2rem;
     --header-spacing: 48px;
   }
@@ -121,10 +123,10 @@ h1 {
   font-size: var(--h1-size);
 }
 h2 {
-  font-size: 2.4rem;
+  font-size: var(--h2-size);
 }
 h3 {
-  font-size: 2.4rem;
+  font-size: 2.3rem;
 }
 h4 {
   font-size: 2.2rem;
@@ -187,10 +189,10 @@ iframe {
 }
 @media (max-width: 767px) {
   h2 {
-    font-size: 2.4rem;
+    font-size: 2rem;
   }
   h3 {
-    font-size: 2.1rem;
+    font-size: 1.8rem;
   }
 }
 .gh-site {
@@ -1926,7 +1928,6 @@ blockquote.kg-blockquote-alt {
   gap: 10px;
 }
 .post-title {
-  font-size: 25px;
   font-weight: 800;
   letter-spacing: 0.15em;
   word-break: break-word;
@@ -1938,20 +1939,25 @@ blockquote.kg-blockquote-alt {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 25px;
   font-weight: 800;
   background-color: rgba(0, 0, 0, 0.3);;
   letter-spacing: 0.15em;
   word-break: break-word;
   padding: 15px;
   border-radius: 10px;
+  font-size: 2.4rem;
+}
+@media (max-width: 767px) {
+  .post-title-link-featured {
+    font-size: 1.2rem;
+  }
 }
 .has-serif-title :where(.post-feed, .single-post) .post-title {
   font-family: var(--font-serif);
 }
 .post-meta {
   color: var(--secondary-text-color);
-  font-size: 14px;
+  font-size: 11px;
   font-weight: 600;
   letter-spacing: 0.15em;
 }
@@ -2110,11 +2116,13 @@ blockquote.kg-blockquote-alt {
   flex-direction: column;
 }
 .featured-posts .post-title {
-  font-size: 2rem;
+  letter-spacing: 0.5rem;
+  font-size: 1.6rem;
+  font-weight: bold;
   line-height: 1.2;
 }
 @media (max-width: 767px) {
-  .featured-posts {
+  .featured-posts .post-title{
     margin-bottom: 0;
     margin-top: 24px;
   }
@@ -2550,21 +2558,21 @@ blockquote.kg-blockquote-alt {
 
 /* 首頁貼文卡片內文 */
 .card-post-content {
-  display: -webkit-box;
-  -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
+  display: block; /* 或者使用 flex 等其他布局模式 */
+  max-height: 6.2em; /* 基于 font-size 计算，这将允许显示大约4行文本 */
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 14px;
-  max-height: 5.6em;
-  line-height: 1.4;
+  font-size: 11px;
+  font-weight: 600;
   color: #616161;
-  margin: 20px 0px 20px 0px;
+  margin: 20px 0px;
+  line-height: 1.6; /* 根据 font-size 调整 */
 }
 
-@media (min-width: 535px) {
+@media (min-width: 768px) {
   .card-post-content {
-    font-size: 18px;
+    font-size: 14px;
+    font-weight: 500;
   }
 }
 
