fix: font size on post page

--- a/post.hbs
+++ b/post.hbs
@@ -30,9 +30,9 @@
             {{content}}
         </div>
 
-        {{#if @custom.show_author}}
+        {{!-- {{#if @custom.show_author}}
             {{> "author-box"}}
-        {{/if}}
+        {{/if}} --}}
 
     </article>
 
