--- a/post.hbs
+++ b/post.hbs
@@ -22,12 +22,14 @@
                     <span class="post-meta-item post-meta-tags"><a class="post-tag post-tag-{{slug}}" href="{{url}}" title="{{name}}">{{name}}</a></span>
                 {{/primary_tag}}
             </div>
-            <h1 class="post-title">{{title}}</h1>
+            <h1 class="post-title kg-width-wide">{{title}}</h1>
             {{> "post-image"}}
         </header>
 
-        <div class="gh-content gh-canvas">
-            {{content}}
+        <div class="gh-canvas">
+            <div class="gh-content kg-width-wide">
+                {{content}}
+            </div>
         </div>
 
         {{!-- {{#if @custom.show_author}}
