add: nature page

--- a/default.hbs
+++ b/default.hbs
@@ -90,6 +90,7 @@
         {{> "home-campus"}}
         {{> "home-sport"}}
         {{> "home-reader"}}
+        {{> "home-nature"}}
     
     {{else}}
 
