--- a/page.hbs
+++ b/page.hbs
@@ -13,6 +13,8 @@
             </header>
         {{/match}}
 
+        what is page?
+
         <div class="gh-content gh-canvas">
             {{content}}
         </div>
